[package]
name = "wasm-ulmo-map"
version = "0.1.7"
authors = ["seldred <samuel.eldred@gmail.com>"]
edition = "2018"
description = "An implementation of the Ulmo game map in web assembly"
repository = "https://github.com/samroyale/wasm-ulmo-map"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]
#default = ["console_error_panic_hook"]
#default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
#wasm-bindgen = "0.2"
serde = "^1.0.59"
serde_derive = "^1.0.59"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
#opt-level = "z"
lto = true
